--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.38.0
-pandas==2.2.3
 numpy>=2.1,<3
 python-dotenv==1.0.1
 supabase==2.4.6
-
+streamlit>=1.36
+psycopg2-binary>=2.9
+pandas>=2.0
 
 
